--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -16,7 +16,7 @@
     bool noResults = (Model.TotalItems) == 0;
 
     List<SelectListItem> listItems = new List<SelectListItem>();
-    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "DateTimeStamp" });
     listItems.Add(new SelectListItem { Text = "WebRequest ID", Value = "WebRequestID" });
     listItems.Add(new SelectListItem { Text = "Raw URL", Value = "RawURL" });
     listItems.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
