--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <link rel="stylesheet" href="~/Content/loggingProjectStyle.css" />
+
+    <link rel="stylesheet" href="~/Content/foundation-6.5.1-complete/css/foundation.css">
+    <script src="~/Content/foundation-6.5.1-complete/js/vendor/foundation.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
