Working on marking logs as important

--- a/InternshipSkeleton/Views/Example/Index.cshtml
+++ b/InternshipSkeleton/Views/Example/Index.cshtml
@@ -4,6 +4,13 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.ActionLink("View All", "ViewAll", "Example");
-@Html.ActionLink("Add New", "AddNew", "Example");
+<div>
+    <h2> making space so that links can be seen</h2>
+</div>
+
+<div>
+    @Html.ActionLink("View All", "ViewAll", "Example");
+    @Html.ActionLink("Add New", "AddNew", "Example");
+</div>
+
 
