--- a/InternshipSkeleton/Views/LogException/MarkAsImportant.cshtml
+++ b/InternshipSkeleton/Views/LogException/MarkAsImportant.cshtml
@@ -28,7 +28,7 @@ Enter username of person marking as important
     <!-- box to enter username/email - doesn't directly update model.Important, just gets sent to Update function -->
     <div class="form-group">
         <!-- (at)Html.TextBox("username") -->
-        @Html.EditorFor(model => model.Important, new { @class = "form-control" });
+        @Html.EditorFor(model => model.Important, new { @class = "form-control" })
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
