marking as important with input form is now working

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -15,6 +15,7 @@
     var id = Model.PageNumber;
 
     bool noResults = (Model.TotalItems) == 0;
+    int currRow = 0;
 
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
@@ -135,6 +136,7 @@
                         </div>
                     </td>
                 </tr>
+                currRow++;
             }
         </tbody>
     </table>
