--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -122,15 +122,15 @@
                             </form>
                             <form name="modelForm">
                                 <!-- supposed to send the model parameters to the controller -->
-                                @Html.HiddenFor(model => currentRow.UserID, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.EmailAddress, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.TimeStamp, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.WebRequestID, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.Message, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.MethodName, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.Source, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.StackTrace, new { htmlAttributes = new { @class = "form-control" } });
-                                @Html.HiddenFor(model => currentRow.Important, new { htmlAttributes = new { @class = "form-control" } });
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).UserID, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).TimeStamp, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).WebRequestID, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).Message, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).MethodName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).Source, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).StackTrace, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.HiddenFor(model => model.Items.ElementAt(currRow).Important, new { htmlAttributes = new { @class = "form-control" } })
                             </form>
                             <button onclick="closeModal()">Cancel</button> 
                         </div>
